Task-51635: [Notes] alignment UI issue in treeview (#438)

--- a/notes-webapp/src/main/webapp/skin/less/notes/notes.less
+++ b/notes-webapp/src/main/webapp/skin/less/notes/notes.less
@@ -475,7 +475,7 @@
           margin-left: 3px;
         }
         .v-treeview-node__toggle {
-          margin-left: 24px;
+          margin-left: 4px;
           margin-right: -3px
         }
         &:hover {
